Conv2d_deform, need to understand it

--- a/Convolution/Convolution.vcxproj
+++ b/Convolution/Convolution.vcxproj
@@ -76,11 +76,18 @@
     </Link>
     <CudaCompile>
       <TargetMachinePlatform>64</TargetMachinePlatform>
+      <CodeGeneration>compute_89,sm_89</CodeGeneration>
+      <FastMath>true</FastMath>
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
     <CudaCompile Include="conv2d_inf.cu" />
     <CudaCompile Include="conv2_back.cu" />
+    <CudaCompile Include="conv2_deform.cu" />
+    <CudaCompile Include="main.cu" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="main_header.cuh" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
