--- a/Convolution/Convolution.vcxproj
+++ b/Convolution/Convolution.vcxproj
@@ -84,6 +84,7 @@
     <CudaCompile Include="conv2d_inf.cu" />
     <CudaCompile Include="conv2_back.cu" />
     <CudaCompile Include="conv2_deform.cu" />
+    <CudaCompile Include="conv_bookPMPP.cu" />
     <CudaCompile Include="main.cu" />
   </ItemGroup>
   <ItemGroup>
