--- a/Convolution/Convolution.vcxproj
+++ b/Convolution/Convolution.vcxproj
@@ -85,6 +85,7 @@
     <CudaCompile Include="conv2_back.cu" />
     <CudaCompile Include="conv2_deform.cu" />
     <CudaCompile Include="conv_bookPMPP.cu" />
+    <CudaCompile Include="conv_1d.cu" />
     <CudaCompile Include="main.cu" />
   </ItemGroup>
   <ItemGroup>
