--- a/Convolution/Convolution.vcxproj
+++ b/Convolution/Convolution.vcxproj
@@ -65,7 +65,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <PreprocessorDefinitions>WIN32;WIN64;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <LanguageStandard>stdcpp17</LanguageStandard>
+      <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
@@ -86,6 +86,7 @@
     <CudaCompile Include="conv2_deform.cu" />
     <CudaCompile Include="conv_bookPMPP.cu" />
     <CudaCompile Include="conv_1d.cu" />
+    <CudaCompile Include="conv_3d.cu" />
     <CudaCompile Include="main.cu" />
   </ItemGroup>
   <ItemGroup>
